--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.8.2",
     "@astrojs/mdx": "^3.1.3",
     "@astrojs/preact": "^3.5.1",
+    "@astrojs/react": "^3.6.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.12.2",
     "preact": "^10.22.1",
-    "@astrojs/check": "^0.8.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "typescript": "^5.5.3"
   }
 }
